[gd_scene load_steps=9 format=3 uid="uid://rmxsvma5j3wr"]

[ext_resource type="Script" uid="uid://qhnggmd10dhx" path="res://magiteknician/menus/main_menu.gd" id="1_06t4h"]
[ext_resource type="PackedScene" uid="uid://bh35uckn1if6a" path="res://magiteknician/menus/fade_transition.tscn" id="2_5nvhq"]
[ext_resource type="Texture2D" uid="uid://dti6mllr6qyrb" path="res://magiteknician/assets/title.png" id="2_q40py"]
[ext_resource type="PackedScene" uid="uid://d1q3b0xyqj6qu" path="res://magiteknician/player/menu_audio_player.tscn" id="4_ioc2y"]
[ext_resource type="AudioStream" uid="uid://cer57nb0ftdpw" path="res://magiteknician/assets/audio/menu/new_game.ogg" id="5_6dvco"]
[ext_resource type="AudioStream" uid="uid://bk50w8x0ah2hv" path="res://magiteknician/assets/audio/menu/continue.ogg" id="6_ytccj"]
[ext_resource type="AudioStream" uid="uid://qvs8xh0q26st" path="res://magiteknician/assets/audio/menu/options.ogg" id="7_y0l7d"]
[ext_resource type="AudioStream" uid="uid://bbe32hw50xh4u" path="res://magiteknician/assets/audio/menu/quit.ogg" id="8_t0fkp"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_06t4h")

[node name="Title" type="TextureRect" parent="."]
offset_left = 192.0
offset_right = 992.0
offset_bottom = 186.0
texture = ExtResource("2_q40py")

[node name="ButtonManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 384.0
offset_top = 128.0
offset_right = 712.0
offset_bottom = 646.0

[node name="NewGame" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 56.0
offset_top = 32.0
offset_right = 264.0
offset_bottom = 96.0
text = "New Game"

[node name="Continue" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 56.0
offset_top = 160.0
offset_right = 264.0
offset_bottom = 224.0
text = "Continue"

[node name="Options" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 56.0
offset_top = 288.0
offset_right = 264.0
offset_bottom = 351.0
text = "Options
"

[node name="Quit" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 56.0
offset_top = 416.0
offset_right = 264.0
offset_bottom = 480.0
text = "Quit"

[node name="FadeTransition" parent="." instance=ExtResource("2_5nvhq")]

[node name="MenuAudioPlayer" parent="." instance=ExtResource("4_ioc2y")]
audio_streams = Dictionary[String, AudioStream]({
"continue": ExtResource("6_ytccj"),
"new_game": ExtResource("5_6dvco"),
"options": ExtResource("7_y0l7d"),
"quit": ExtResource("8_t0fkp")
})

[connection signal="pressed" from="ButtonManager/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="ButtonManager/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="ButtonManager/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ButtonManager/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="FadeTransition" to="." method="_on_fade_transition_timeout"]
